Fixed squishy icons  and sidebar update

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -398,6 +398,7 @@ li {
     color: white;
     border-radius: 50%;
     margin-right: 15px;
+    flex-shrink: 0;
 }
 
 /* .secretDiv {
