--- a/frontend/components/nav_bar/logo_nav_bar/logo_nav.module.css
+++ b/frontend/components/nav_bar/logo_nav_bar/logo_nav.module.css
@@ -1,6 +1,13 @@
 .logoContainer {
-    padding-left: 15px;
+    padding-left: 17px;
+    width: 11.5%;
+    display: flex;
+    justify-content: space-between;
     /* display: block;
     height: 24;
     width: 80; */
+}
+
+.hamburgerToggle {
+    
 }
