--- a/frontend/components/nav_bar/nav_bar.module.css
+++ b/frontend/components/nav_bar/nav_bar.module.css
@@ -3,9 +3,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 8vh;
+    height: 80px;
     background-color: #393E41;
     color: rgb(36, 41, 44);
     position: fixed;
+    z-index: 2;
 }
-
